V3001: update with airlock and rotor sensor

--- a/Prevu.Synoptics.V3001-COVERIS/P230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P230.xaml
@@ -314,10 +314,6 @@
             VerticalAlignment="Top" 
             ComponentName="234-01-MA1" Grid.Row="1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="332,180,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="230-01-MA1" Grid.Row="1"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="334,48,0,0" 
             VerticalAlignment="Top" 
             ComponentName="212-01-MA1" Grid.Row="1"/>
@@ -393,5 +389,13 @@
     <TextBlock HorizontalAlignment="Left" Margin="794,39,0,0" TextWrapping="Wrap" 
 		VerticalAlignment="Top" Height="50" Width="94" TextAlignment="Center" 
 		FontSize="36" Foreground="Black" FontWeight="Bold"><Run Text="Q"/><Run Language="it-it" Text="5"/><Run Text="1"/><LineBreak/><Run/></TextBlock>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="332,228,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="230-61-SS1" Grid.Row="1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="332,173,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="230-01-MA1" Grid.Row="1"/>
   </Grid>
 </UserControl>
