--- a/Prevu.Synoptics.V3001-COVERIS/P520.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P520.xaml
@@ -281,7 +281,7 @@
             Margin="1210,498,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="524-01-MA1" 
-            JumpToLabel="530-21-CV1"/>
+            JumpToLabel="527-01-MA1"/>
 		<Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="899,682,0,0" 
             VerticalAlignment="Top" 
