--- a/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
@@ -288,9 +288,9 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="432" Canvas.Top="30" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="894" Canvas.Top="178" Height="188" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="950" Canvas.Top="483" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-WASHING" Canvas.Left="186" Canvas.Top="33"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-MIXER" Canvas.Left="186" Canvas.Top="33"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="376-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="1232" Canvas.Top="268"/>
-        <Labels:JumpLabel JumpFromLabel="354-HEAT" JumpToLabel="330-WASHING" Direction="Left" Canvas.Left="165" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="354-HEAT" JumpToLabel="330-MIXER" Direction="Left" Canvas.Left="165" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="371-VIEW" DetailsPageName="D371" HideComponentName="True" Canvas.Left="637" Canvas.Top="419"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="354-HEAT" DetailsPageName="D354" Canvas.Left="257" Canvas.Top="612"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-HOPPER" DetailsPageName="D376" HideComponentName="True" Canvas.Left="875" Canvas.Top="236"/>
