V4228: General update accroding to Rev. G of P&ID

--- a/Prevu.Synoptics.V4228-RES/OverallView.xaml
+++ b/Prevu.Synoptics.V4228-RES/OverallView.xaml
@@ -14,7 +14,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
 
     <Canvas Height="4169" Width="7938">
-        <Labels:Pipe Canvas.Left="2345" Canvas.Top="653" PipeHeight="Medium" Width="792" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="120-01-MA1">
+        <Labels:Pipe Canvas.Left="2346" Canvas.Top="652" PipeHeight="Medium" Width="790" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="120-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -24,7 +24,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2597" Canvas.Top="1044" PipeHeight="Medium" Width="147" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="120-01-MA1"/>
+        <Labels:Pipe Canvas.Left="2597" Canvas.Top="1042" PipeHeight="Medium" Width="147" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="120-01-MA1"/>
         <Labels:Pipe Canvas.Left="2736" Canvas.Top="261" PipeHeight="Medium" Width="64" StatusComponent="120-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="7269" Canvas.Top="2357" PipeHeight="Medium" Width="892" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -73,7 +73,7 @@
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="5603" Canvas.Top="3319" PipeHeight="Medium" Width="85" StatusComponent="868-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="4063" Canvas.Top="913" Width="133" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="2512" Canvas.Top="1738" Width="308" Color="Water" StatusComponent="232-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Canvas.Left="2672" Canvas.Top="1776" Width="384" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -84,7 +84,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3960" Canvas.Top="2325" Width="252" Color="Water" StatusComponent="292-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4529" Canvas.Top="1257" Width="90" Color="Water" StatusComponent="232-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4659" Canvas.Top="1312" Width="90" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="3395" Canvas.Top="1581" Width="1340" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -106,7 +106,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3986" Canvas.Top="2249" Width="81" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4451" Canvas.Top="1422" Width="332" Color="Water" StatusComponent="232-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="4609" Canvas.Top="1449" Width="276" Color="Water" StatusComponent="236-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -116,11 +116,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2664" Canvas.Top="1586" Width="1388" Color="Water" StatusComponent="232-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4074" Canvas.Top="1576" Width="127" Color="Water" StatusComponent="232-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
-        <Labels:Pipe Canvas.Left="4222" Canvas.Top="1586" Width="397" Color="Water" StatusComponent="232-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="1168" Canvas.Top="2685" Width="2927" Color="Water" StatusComponent="293-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
-        <Labels:Pipe Canvas.Left="145" Canvas.Top="1671" Width="2050" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2862" Canvas.Top="1586" Width="1190" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4074" Canvas.Top="1576" Width="127" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
+        <Labels:Pipe Canvas.Left="4222" Canvas.Top="1586" Width="527" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2198" Canvas.Top="2685" Width="1897" Color="Water" StatusComponent="293-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left"/>
+        <Labels:Pipe Canvas.Left="1407" Canvas.Top="1905" Width="1584" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -130,7 +130,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="1168" Canvas.Top="648" Width="184" Color="Water" StatusComponent="293-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="1918" Canvas.Top="1114" Width="283" Color="Water" StatusComponent="293-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="3990" Canvas.Top="2475" Width="105" Color="Water" StatusComponent="293-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="3981" Canvas.Top="2585" Width="224" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -142,9 +142,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2677" Canvas.Top="1801" Width="452" Color="Water" StatusComponent="457-01-MA1"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="1182" Canvas.Top="1792" Width="1474" Color="Water" StatusComponent="457-01-MA1"  HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right"/>
-        <Labels:Pipe Canvas.Left="755" Canvas.Top="1801" Width="403" Color="Water" StatusComponent="457-01-MA1"  HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2875" Canvas.Top="1801" Width="254" Color="Water" StatusComponent="457-01-MA1"  HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2212" Canvas.Top="1792" Width="642" Color="Water" StatusComponent="457-01-MA1"  HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Canvas.Left="755" Canvas.Top="1801" Width="1431" Color="Water" StatusComponent="457-01-MA1"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="-193" Canvas.Top="2749" Width="1900" Color="Water" StatusComponent="457-01-MA1"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -266,7 +266,7 @@
         <local:P020 CacheMode="BitmapCache" Canvas.Left="54" Canvas.Top="31" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P100 CacheMode="BitmapCache" Canvas.Left="1144" Canvas.Top="516" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P140 CacheMode="BitmapCache" Canvas.Left="2769" Canvas.Top="164" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P230 CacheMode="BitmapCache" Canvas.Left="3813" Canvas.Top="533" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P230 CacheMode="BitmapCache" Canvas.Left="3813" Canvas.Top="579" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P288 CacheMode="BitmapCache" Canvas.Left="2529" Canvas.Top="1801" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P330 CacheMode="BitmapCache" Canvas.Left="4845" Canvas.Top="972" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P350 CacheMode="BitmapCache" Canvas.Left="6101" Canvas.Top="1622" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
