--- a/Prevu.Synoptics.V4228-RES/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P020.xaml
@@ -151,13 +151,13 @@
         <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="152" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="018-01-MA1" Canvas.Left="265" Canvas.Top="213"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="020-41-LT1" Canvas.Left="160" Canvas.Top="423"/>
-        <Labels:DeviceLabel ComponentName="020-DEBALER" Canvas.Left="264" Canvas.Top="663" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="020-DEBALER" Canvas.Left="467" Canvas.Top="598" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="098-01-MA1" Canvas.Left="1264" Canvas.Top="483" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="024-01-MA1" Canvas.Left="667" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="955" Canvas.Top="466" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="956" Canvas.Top="466" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="025-01-MA1" Canvas.Left="751" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="829" Canvas.Top="555" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="020-01-YA1" Canvas.Left="464" Canvas.Top="598" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.511,0.55"/>
+        <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="1025" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="020-01-YA1" Canvas.Left="431" Canvas.Top="660" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.511,0.55"/>
         <Labels:DeviceLabel ComponentName="018-01-YA1" Canvas.Left="372" Canvas.Top="213" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
