--- a/Prevu.Synoptics.V4228-RES/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P230.xaml
@@ -8,8 +8,9 @@
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="Water" Width="242" StatusComponent="291-01-MA1" Canvas.Left="433" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="138" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="446" Canvas.Top="572" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="140" StatusComponent="236-01-MA1" Canvas.Left="708" Canvas.Top="733" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="242" StatusComponent="291-01-MA1" Canvas.Left="433" Canvas.Top="334" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="138" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="446" Canvas.Top="527" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,10 +20,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="183" StatusComponent="292-01-MA1" Canvas.Left="513" Canvas.Top="639" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="74" StatusComponent="292-01-MA1" Canvas.Left="716" Canvas.Top="629" Icon="Right" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="162" StatusComponent="292-01-MA1" Canvas.Left="816" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="613" Canvas.Top="426">
+        <Labels:Pipe Color="Water" Width="183" StatusComponent="292-01-MA1" Canvas.Left="513" Canvas.Top="594" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="74" StatusComponent="292-01-MA1" Canvas.Left="716" Canvas.Top="584" Icon="Right" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="162" StatusComponent="292-01-MA1" Canvas.Left="816" Canvas.Top="593" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="613" Canvas.Top="381">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,9 +33,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="107" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="993" Canvas.Top="656"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="51" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="633" Canvas.Top="121"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="156" PipeHeight="Medium" StatusComponent="228-01-MA1" Canvas.Left="601" Canvas.Top="195">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="107" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="993" Canvas.Top="611"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="51" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="633" Canvas.Top="76"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="156" PipeHeight="Medium" StatusComponent="228-01-MA1" Canvas.Left="601" Canvas.Top="150">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -44,8 +45,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="130" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="421" Canvas.Top="121"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="765" Canvas.Top="623">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="130" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="421" Canvas.Top="76"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="765" Canvas.Top="578">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -55,8 +56,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="169" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="796" Canvas.Top="656"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="120" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" Canvas.Left="646" Canvas.Top="658">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="169" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="796" Canvas.Top="611"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="182" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" Canvas.Left="615" Canvas.Top="644">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -66,21 +67,24 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="242" StatusComponent="292-01-MA1" Canvas.Left="433" Canvas.Top="504"/>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Width="152" Canvas.Left="498" Canvas.Top="116" />
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="947" Canvas.Top="631" Height="60" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_MU_Grinder Canvas.Left="577" Canvas.Top="271" Height="161" Width="203" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_WCE_Centrifuge Canvas.Left="663" Canvas.Top="481" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="228-01-MA1" JumpToLabel="170-01-MA1" Canvas.Left="361" Canvas.Top="91" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="292-01-MA1" Canvas.Left="361" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="661" Canvas.Top="691" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="298-21-CV1" JumpToLabel="320-41-LT1" Canvas.Left="1071" Canvas.Top="626" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="230-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="361" Canvas.Top="347" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-01-MA1" Canvas.Left="635" Canvas.Top="281"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="228-01-MA1" Canvas.Left="529" Canvas.Top="143"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="234-01-MA1" Canvas.Left="932" Canvas.Top="702"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-01-YA1" Canvas.Left="757" Canvas.Top="318"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="232-01-MA1" Canvas.Left="822" Canvas.Top="491"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-02-MA1" Canvas.Left="757" Canvas.Top="383"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="242" StatusComponent="292-01-MA1" Canvas.Left="433" Canvas.Top="459"/>
+        <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Width="152" Canvas.Left="498" Canvas.Top="71" />
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="947" Canvas.Top="586" Height="60" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_MU_Grinder Canvas.Left="577" Canvas.Top="226" Height="161" Width="203" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="663" Canvas.Top="436" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="661" Canvas.Top="697" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="685" Canvas.Top="712" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="228-01-MA1" JumpToLabel="170-01-MA1" Canvas.Left="361" Canvas.Top="46" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="292-01-MA1" Canvas.Left="361" Canvas.Top="427" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="816" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="298-21-CV1" JumpToLabel="320-41-LT1" Canvas.Left="1071" Canvas.Top="581" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="230-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="361" Canvas.Top="302" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-01-MA1" Canvas.Left="635" Canvas.Top="236"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="228-01-MA1" Canvas.Left="529" Canvas.Top="98"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="234-01-MA1" Canvas.Left="932" Canvas.Top="657"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-01-YA1" Canvas.Left="757" Canvas.Top="273"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="232-01-MA1" Canvas.Left="822" Canvas.Top="446"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-02-MA1" Canvas.Left="757" Canvas.Top="338"/>
+        <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="554" Canvas.Top="710" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
