--- a/Prevu.Synoptics.V4228-RES/Pages/P288.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P288.xaml
@@ -18,18 +18,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="70" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="181" Canvas.Top="94" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="64" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="217" Canvas.Top="125" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="196" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="275" Canvas.Top="174" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="99" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="372" Canvas.Top="165" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="172" StatusComponent="288-21-CV1" Canvas.Left="1043" Canvas.Top="289"/>
         <Labels:Pipe Color="Water" Width="135" StatusComponent="288-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="977" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -55,7 +44,7 @@
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="288" StatusComponent="292-01-MA1" Canvas.Left="1102" Canvas.Top="524" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="1091" Canvas.Top="449" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="182" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="378" Canvas.Top="263" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="190" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="374" Canvas.Top="258" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -120,7 +109,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="69" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="505" Canvas.Top="165" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="69" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="505" Canvas.Top="165" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1209" Canvas.Top="266"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="336" Canvas.Top="543">
             <Machines:CV_Valve_001.RenderTransform>
@@ -174,9 +163,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="201" Canvas.Top="139" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="474" Canvas.Top="718" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="225" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="498" Canvas.Top="733" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_RTF_Microfilter Canvas.Left="448" Canvas.Top="489" Height="130" Width="144" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="349" Canvas.Top="251" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="182" Height="174">
@@ -194,14 +181,13 @@
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="293-01-MA1" JumpToLabel="110-41-LT1" Canvas.Left="1380" Canvas.Top="642"/>
         <Labels:JumpLabel JumpFromLabel="292-01-MA1" JumpToLabel="232-01-MA1" Canvas.Left="1380" Canvas.Top="492" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="230-01-MA1" Canvas.Left="1380" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="232-01-MA1" Canvas.Left="103" Canvas.Top="61" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="302" Canvas.Top="132" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="477-01-MA1" Canvas.Left="561" Canvas.Top="132" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="257" Canvas.Top="265"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-21-CV1" Canvas.Left="1189" Canvas.Top="219"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="293-01-MA1" Canvas.Left="1189" Canvas.Top="706"/>
         <Labels:DeviceLabel ComponentName="292-01-MA1" Canvas.Left="1189" Canvas.Top="555" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="291-01-MA1" Canvas.Left="1189" Canvas.Top="373" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="94" Canvas.Top="152" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-41-LT1" Canvas.Left="473" Canvas.Top="570"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="268" Canvas.Top="584"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-01-MA1" Canvas.Left="587" Canvas.Top="499"/>
