--- a/Prevu.Synoptics.V4228-RES/WaterView.xaml
+++ b/Prevu.Synoptics.V4228-RES/WaterView.xaml
@@ -12,6 +12,36 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="1200" Width="1850" >
+        <Labels:Pipe Color="Water" Width="294" StatusComponent="293-01-MA1" Canvas.Left="402" Canvas.Top="717" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="0.075"/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform X="-0.249"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="285" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="266" Canvas.Top="853" Icon="Left" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="110-23-CV1" Canvas.Left="161" Canvas.Top="865" HorizontalAlignment="Left" VerticalAlignment="Center" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="94" StatusComponent="285-01-MA1" Canvas.Left="829" Canvas.Top="438" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -509,7 +539,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="602" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="277" Canvas.Top="563" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left">
+        <Labels:Pipe Color="Water" Width="332" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="547" Canvas.Top="563" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -519,7 +549,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="74" StatusComponent="293-01-MA1" Canvas.Left="242" Canvas.Top="607" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="74" StatusComponent="293-01-MA1" Canvas.Left="231" Canvas.Top="897" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -1040,6 +1070,26 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
+        <Machines:WaterPump Height="20" Width="22" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="771" Canvas.Top="386" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+        <Machines:WaterPump Height="20" Width="22" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1199" Canvas.Top="114" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
         <Machines:External Canvas.Left="72" Canvas.Top="966" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="26" RenderTransformOrigin="0.5,0.5">
             <Machines:External.RenderTransform>
                 <TransformGroup>
@@ -1060,6 +1110,27 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
+        <Machines:CV_Valve_001 Height="55" Width="54" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="164" Canvas.Top="797" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:V01_EXC_HeatExchanger Canvas.Left="1407" Canvas.Top="528" Height="20" Width="23" RenderTransformOrigin="0.5,0.5">
+            <Machines:V01_EXC_HeatExchanger.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:V01_EXC_HeatExchanger.RenderTransform>
+        </Machines:V01_EXC_HeatExchanger>
+        <Machines:V01_VB_VibratingScreen Canvas.Left="1279" Canvas.Top="268" Height="64" Width="56" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="350" Canvas.Left="837" Canvas.Top="907" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="460" Canvas.Left="1515" Canvas.Top="417" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="430" Canvas.Left="1060" Canvas.Top="258" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -1087,38 +1158,7 @@
         <Labels:ValueLabel Canvas.Left="1441" Canvas.Top="604" TrendName="LEVEL" ComponentName="470-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="1441" Canvas.Top="626" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="470-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="1441" Canvas.Top="648" ComponentName="470-42-TT1" TrendName="TEMPERATURE" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_EXC_HeatExchanger Canvas.Left="1407" Canvas.Top="528" Height="20" Width="23" RenderTransformOrigin="0.5,0.5">
-            <Machines:V01_EXC_HeatExchanger.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:V01_EXC_HeatExchanger.RenderTransform>
-        </Machines:V01_EXC_HeatExchanger>
         <Rectangle Height="40" Width="40" Fill="Gray" RadiusX="8" RadiusY="8" Canvas.Left="762" Canvas.Top="376" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:WaterPump Height="20" Width="22" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="771" Canvas.Top="386" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump Height="20" Width="22" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1199" Canvas.Top="114" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:V01_VB_VibratingScreen Canvas.Left="1279" Canvas.Top="268" Height="64" Width="56" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 
 </UserControl>
